--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title lang="en">Studio</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <nav class="navigation">
           <a class="logo link header--logo" href="index.html" lang="en"
@@ -58,16 +58,16 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="order-section">
+      <!-- <section class="order-section">
         <div class="container">
           <div class="order">
             <h1 class="order-heading">Ефективні рішення для вашого бізнесу</h1>
             <button class="button" type="button" data-modal-open>Замовити послугу</button>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="benefits-section">
         <div class="container">
           <ul class="benefits list">
@@ -118,7 +118,7 @@
           </ul>
         </div>
       </section>
-      <section class="our-job-section">
+      <!-- <section class="our-job-section">
         <div class="container">
           <h2 class="our-job-header">Чим ми займаємося</h2>
           <ul class="our-job list">
@@ -148,8 +148,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="team-section">
+      </section> -->
+      <!-- <section class="team-section">
         <div class="container">
           <h3 class="team-heading">Наша команда</h3>
           <ul class="team list">
@@ -303,8 +303,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="clients-section">
+      </section> -->
+      <!-- <section class="clients-section">
         <div class="container">
           <h3 class="clients-heading">Постійні клієнти</h3>
           <ul class="clients list">
@@ -352,9 +352,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer-address">
+    <!-- <footer class="footer-address">
       <div class="container">
         <div class="footer-blocks">
           <div class="address-block">
@@ -422,7 +422,7 @@
             </form>
           </div>
         </div>
-      </div>
+      </div> -->
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
