--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </ul>
         </div>
       </section> -->
-      <!-- <section class="team-section">
+      <section class="team-section">
         <div class="container">
           <h3 class="team-heading">Наша команда</h3>
           <ul class="team list">
@@ -303,7 +303,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="clients-section">
         <div class="container">
           <h3 class="clients-heading">Постійні клієнти</h3>
