--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="./CSS/reset.css" />
-    <!-- <link rel="stylesheet" href="./CSS/style.css" /> -->
     <link rel="stylesheet" href="./CSS/main.css" />
     <title lang="en">Studio</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container">
         <nav class="navigation">
           <a class="logo link header--logo" href="index.html" lang="en"
@@ -57,17 +56,66 @@
             >
           </li>
         </ul>
+        <button class="menu-open" type="button">
+          <svg class="menu-open__icon" width="40" height="40">
+            <use href="./images/symbol-defs.svg#icon-open"></use>
+          </svg>
+        </button>
+        <div class="mob-menu is-hidden">
+          <button class="menu-close" type="button">
+            <svg class="menu-close__icon" width="40" height="40">
+              <use href="./images/symbol-defs.svg#icon-menu-close"></use>
+            </svg>
+          </button>
+          <div class="container-mob">
+            <div class="menu-nav-block">
+              <nav class="menu-nav">
+                <ul class="menu-nav__list list">
+                  <li class="menu-nav__item">
+                    <a class="menu-nav__link current link" href="index.html">Студія</a>
+                  </li>
+                  <li class="menu-nav__item">
+                    <a class="menu-nav__link link" href="portfolio.html">Портфоліо</a>
+                  </li>
+                  <li class="menu-nav__item">
+                    <a class="menu-nav__link link" href="">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="menu-contact-block">
+              <ul class="menu-contact list">
+                <li class="menu-contact__item">
+                  <a class="menu-contact__tel-link link" href="tel:+380961111111">
+                    +38 096 111 11 11</a
+                  >
+                </li>
+                <li class="menu-contact__item">
+                  <a class="menu-contact__mail-link link" href="mailto:info@devstudio.com">
+                    info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="menu-soc list">
+                <li class="menu-soc_item"><a class="menu-soc_link" href="">Instagram</a></li>
+                <li class="menu-soc_item"><a class="menu-soc_link" href="">Twitter</a></li>
+                <li class="menu-soc_item"><a class="menu-soc_link" href="">Facebook</a></li>
+                <li class="menu-soc_item"><a class="menu-soc_link" href="">LinkedIn</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-    </header> -->
+    </header>
     <main>
-      <!-- <section class="order-section">
+      <section class="order-section">
         <div class="container">
           <div class="order">
             <h1 class="order-heading">Ефективні рішення для вашого бізнесу</h1>
             <button class="button" type="button" data-modal-open>Замовити послугу</button>
           </div>
         </div>
-      </section> -->
+      </section>
       <section class="benefits-section">
         <div class="container">
           <ul class="benefits list">
@@ -118,48 +166,79 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="our-job-section">
+      <section class="our-job-section">
         <div class="container">
           <h2 class="our-job-header">Чим ми займаємося</h2>
           <ul class="our-job list">
             <li class="our-job__item">
-              <img
-                class="our-job__picture"
-                src="./images/our-job-1.jpg"
-                alt="печатает на планшете"
-                width="370" />
+              <picture>
+                <source
+                  srcset="./images/our-job-1.jpg 1x, ./images/our-job-1-2x.jpg 2x"
+                  media="(min-width: 1200px" />
+                <img
+                  class="our-job__picture"
+                  src="./images/our-job-1.jpg"
+                  alt="печатает на планшете" />
+              </picture>
               <p class="our-job__description">Десктопні додатки</p>
             </li>
             <li class="our-job__item">
-              <img
-                class="our-job__picture"
-                src="./images/our-job-2.jpg"
-                alt="смартфон и ноутбук"
-                width="370" />
+              <picture>
+                <source
+                  srcset="./images/our-job-2.jpg 1x, ./images/our-job-2-2x.jpg 2x"
+                  media="(min-width: 1200px" />
+                <img
+                  class="our-job__picture"
+                  src="./images/our-job-2.jpg"
+                  alt="печатает на планшете" />
+              </picture>
+
               <p class="our-job__description">Мобільні додатки</p>
             </li>
             <li class="our-job__item">
-              <img
-                class="our-job__picture"
-                src="./images/our-job-3.jpg"
-                alt="планшет с палитрой цветов"
-                width="370" />
+              <picture>
+                <source
+                  srcset="./images/our-job-3.jpg 1x, ./images/our-job-3-2x.jpg 2x"
+                  media="(min-width: 1200px" />
+                <img
+                  class="our-job__picture"
+                  src="./images/our-job-3.jpg"
+                  alt="печатает на планшете" />
+              </picture>
+
               <p class="our-job__description">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <section class="team-section">
         <div class="container">
           <h3 class="team-heading">Наша команда</h3>
           <ul class="team list">
             <li class="team__item">
               <div class="team__card">
-                <img
-                  class="team__photo"
-                  src="./images/igor-demyanenko.jpg"
-                  alt="Игорь Демьяненко"
-                  width="270" />
+                <picture>
+                  <source
+                    srcset="./images/igor-demyanenko.jpg 1x, ./images/igor-demyanenko-2x.jpg 2x"
+                    media="(min-width: 1200px" />
+                  <source
+                    srcset="
+                      ./images/igor-demyanenko-tab.jpg    1x,
+                      ./images/igor-demyanenko-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px" />
+                  <source
+                    srcset="
+                      ./images/igor-demyanenko-mob.jpg    1x,
+                      ./images/igor-demyanenko-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 480px" />
+                  <img
+                    class="team__photo"
+                    src="./images/igor-demyanenko-mob.jpg"
+                    alt="Игорь Демьяненко" />
+                </picture>
+
                 <h4 class="team__name">Ігор Дем'яненко</h4>
                 <p class="team__position" lang="en">Product Designer</p>
                 <ul class="worker-social list">
@@ -192,11 +271,19 @@
             </li>
             <li class="team__item">
               <div class="team__card">
-                <img
-                  class="team__photo"
-                  src="./images/olga-repina.jpg"
-                  alt="Ольга Репина"
-                  width="270" />
+                <picture>
+                  <source
+                    srcset="./images/olga-repina.jpg 1x, ./images/olga-repina-2x.jpg 2x"
+                    media="(min-width: 1200px" />
+                  <source
+                    srcset="./images/olga-repina-tab.jpg 1x, ./images/olga-repina-tab-2x.jpg 2x"
+                    media="(min-width: 768px" />
+                  <source
+                    srcset="./images/olga-repina-mob.jpg, ./images/olga-repina-mob-2x.jpg 2x"
+                    media="(min-width: 480px" />
+                  <img class="team__photo" src="./images/olga-repina-mob.jpg" alt="Ольга Репина" />
+                </picture>
+
                 <h4 class="team__name">Ольга Рєпіна</h4>
                 <p class="team__position" lang="en">Frontend Developer</p>
                 <ul class="worker-social list">
@@ -229,11 +316,28 @@
             </li>
             <li class="team__item">
               <div class="team__card">
-                <img
-                  class="team__photo"
-                  src="./images/nikolay-tarasov.jpg"
-                  alt="Николай Тарасов"
-                  width="270" />
+                <picture>
+                  <source
+                    srcset="./images/nikolay-tarasov.jpg 1x, ./images/nikolay-tarasov-2x.jpg 2x"
+                    media="(min-width: 1200px" />
+                  <source
+                    srcset="
+                      ./images/nikolay-tarasov-tab.jpg    1x,
+                      ./images/nikolay-tarasov-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px" />
+                  <source
+                    srcset="
+                      ./images/nikolay-tarasov-mob.jpg,
+                      ./images/nikolay-tarasov-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 480px" />
+                  <img
+                    class="team__photo"
+                    src="./images/nikolay-tarasov-mob.jpg"
+                    alt="Николай Тарасов" />
+                </picture>
+
                 <h4 class="team__name">Микола Тарасов</h4>
                 <p class="team__position" lang="en">Marketing</p>
                 <ul class="worker-social list">
@@ -266,11 +370,25 @@
             </li>
             <li class="team__item">
               <div class="team__card">
-                <img
-                  class="team__photo"
-                  src="./images/mihail-ermakov.jpg"
-                  alt="Михаил Ермаков"
-                  width="270" />
+                <picture>
+                  <source
+                    srcset="./images/mihail-ermakov.jpg 1x, ./images/mihail-ermakov-2x.jpg 2x"
+                    media="(min-width: 1200px" />
+                  <source
+                    srcset="
+                      ./images/mihail-ermakov-tab.jpg    1x,
+                      ./images/mihail-ermakov-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px" />
+                  <source
+                    srcset="./images/mihail-ermakov-mob.jpg, ./images/mihail-ermakov-mob-2x.jpg 2x"
+                    media="(min-width: 480px" />
+                  <img
+                    class="team__photo"
+                    src="./images/mihail-ermakov-tab.jpg"
+                    alt="Михаил Ермаков" />
+                </picture>
+
                 <h4 class="team__name">Михайло Єрмаков</h4>
                 <p class="team__position" lang="en">UI Designer</p>
                 <ul class="worker-social list">
@@ -304,7 +422,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="clients-section">
+      <section class="clients-section">
         <div class="container">
           <h3 class="clients-heading">Постійні клієнти</h3>
           <ul class="clients list">
@@ -352,65 +470,67 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer class="footer-address">
+    <footer class="footer-address">
       <div class="container">
         <div class="footer-blocks">
-          <div class="address-block">
-            <a class="logo link footer--logo" href="index.html"
-              ><span class="logo_blue-color">Web</span>Studio
-            </a>
-            <address class="address">
-              <ul class="address__list list">
-                <li class="address__item">
-                  <a href="" class="address__location link">м. Київ, пр-т Лесі Українки, 26</a>
+          <div class="desktop-upper-block">
+            <div class="address-block">
+              <a class="logo link footer--logo" href="index.html"
+                ><span class="logo_blue-color">Web</span>Studio
+              </a>
+              <address class="address">
+                <ul class="address__list list">
+                  <li class="address__item">
+                    <a href="" class="address__location link">м. Київ, пр-т Лесі Українки, 26</a>
+                  </li>
+                  <li class="address__item">
+                    <a class="address__description link" href="mailto:info@devstudio.com"
+                      >info@devstudio.com</a
+                    >
+                  </li>
+                  <li class="address__item">
+                    <a class="address__phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+                  </li>
+                </ul>
+              </address>
+            </div>
+            <div class="join-us">
+              <h3 class="join-us__heading">Приєднуйтесь</h3>
+              <ul class="join-us__list list">
+                <li class="join-us__item">
+                  <a class="join-us__link" href="">
+                    <svg class="join-us__icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="address__item">
-                  <a class="address__description link" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
+                <li class="join-us__item">
+                  <a class="join-us__link" href=""
+                    ><svg class="join-us__icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                  ></a>
                 </li>
-                <li class="address__item">
-                  <a class="address__phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="join-us__item">
+                  <a class="join-us__link" href=""
+                    ><svg class="join-us__icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="join-us__item">
+                  <a class="join-us__link" href=""
+                    ><svg class="join-us__icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                  ></a>
                 </li>
               </ul>
-            </address>
-          </div>
-          <div class="join-us">
-            <h3 class="join-us__heading">Приєднуйтесь</h3>
-            <ul class="join-us__list list">
-              <li class="join-us__item">
-                <a class="join-us__link" href="">
-                  <svg class="join-us__icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="join-us__item">
-                <a class="join-us__link" href=""
-                  ><svg class="join-us__icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
-                ></a>
-              </li>
-              <li class="join-us__item">
-                <a class="join-us__link" href=""
-                  ><svg class="join-us__icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
-                ></a>
-              </li>
-              <li class="join-us__item">
-                <a class="join-us__link" href=""
-                  ><svg class="join-us__icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
-                ></a>
-              </li>
-            </ul>
+            </div>
           </div>
           <div class="subscribe">
             <p class="subscribe__heading">Підпишіться на розсилку</p>
             <form class="subscribe__form">
-              <label>
+              <label class="subscribe__label">
                 <input class="subscribe__email" type="email" name="email" placeholder="E-mail" />
               </label>
               <button class="button" type="submit">
@@ -422,7 +542,7 @@
             </form>
           </div>
         </div>
-      </div> -->
+      </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -491,5 +611,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
