--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <picture>
                 <source
                   srcset="./images/our-job-1.jpg 1x, ./images/our-job-1-2x.jpg 2x"
-                  media="(min-width: 1200px" />
+                  media="(min-width: 1200px)" />
                 <img
                   class="our-job__picture"
                   src="./images/our-job-1.jpg"
@@ -186,7 +186,7 @@
               <picture>
                 <source
                   srcset="./images/our-job-2.jpg 1x, ./images/our-job-2-2x.jpg 2x"
-                  media="(min-width: 1200px" />
+                  media="(min-width: 1200px)" />
                 <img
                   class="our-job__picture"
                   src="./images/our-job-2.jpg"
@@ -199,7 +199,7 @@
               <picture>
                 <source
                   srcset="./images/our-job-3.jpg 1x, ./images/our-job-3-2x.jpg 2x"
-                  media="(min-width: 1200px" />
+                  media="(min-width: 1200px)" />
                 <img
                   class="our-job__picture"
                   src="./images/our-job-3.jpg"
@@ -220,19 +220,19 @@
                 <picture>
                   <source
                     srcset="./images/igor-demyanenko.jpg 1x, ./images/igor-demyanenko-2x.jpg 2x"
-                    media="(min-width: 1200px" />
+                    media="(min-width: 1200px)" />
                   <source
                     srcset="
                       ./images/igor-demyanenko-tab.jpg    1x,
                       ./images/igor-demyanenko-tab-2x.jpg 2x
                     "
-                    media="(min-width: 768px" />
+                    media="(min-width: 768px)" />
                   <source
                     srcset="
                       ./images/igor-demyanenko-mob.jpg    1x,
                       ./images/igor-demyanenko-mob-2x.jpg 2x
                     "
-                    media="(min-width: 480px" />
+                    media="(min-width: 480px)" />
                   <img
                     class="team__photo"
                     src="./images/igor-demyanenko-mob.jpg"
@@ -274,13 +274,13 @@
                 <picture>
                   <source
                     srcset="./images/olga-repina.jpg 1x, ./images/olga-repina-2x.jpg 2x"
-                    media="(min-width: 1200px" />
+                    media="(min-width: 1200px)" />
                   <source
                     srcset="./images/olga-repina-tab.jpg 1x, ./images/olga-repina-tab-2x.jpg 2x"
-                    media="(min-width: 768px" />
+                    media="(min-width: 768px)" />
                   <source
                     srcset="./images/olga-repina-mob.jpg, ./images/olga-repina-mob-2x.jpg 2x"
-                    media="(min-width: 480px" />
+                    media="(min-width: 480px)" />
                   <img class="team__photo" src="./images/olga-repina-mob.jpg" alt="Ольга Репина" />
                 </picture>
 
@@ -319,19 +319,19 @@
                 <picture>
                   <source
                     srcset="./images/nikolay-tarasov.jpg 1x, ./images/nikolay-tarasov-2x.jpg 2x"
-                    media="(min-width: 1200px" />
+                    media="(min-width: 1200px)" />
                   <source
                     srcset="
                       ./images/nikolay-tarasov-tab.jpg    1x,
                       ./images/nikolay-tarasov-tab-2x.jpg 2x
                     "
-                    media="(min-width: 768px" />
+                    media="(min-width: 768px)" />
                   <source
                     srcset="
                       ./images/nikolay-tarasov-mob.jpg,
                       ./images/nikolay-tarasov-mob-2x.jpg 2x
                     "
-                    media="(min-width: 480px" />
+                    media="(min-width: 480px)" />
                   <img
                     class="team__photo"
                     src="./images/nikolay-tarasov-mob.jpg"
@@ -373,16 +373,16 @@
                 <picture>
                   <source
                     srcset="./images/mihail-ermakov.jpg 1x, ./images/mihail-ermakov-2x.jpg 2x"
-                    media="(min-width: 1200px" />
+                    media="(min-width: 1200px)" />
                   <source
                     srcset="
                       ./images/mihail-ermakov-tab.jpg    1x,
                       ./images/mihail-ermakov-tab-2x.jpg 2x
                     "
-                    media="(min-width: 768px" />
+                    media="(min-width: 768px)" />
                   <source
                     srcset="./images/mihail-ermakov-mob.jpg, ./images/mihail-ermakov-mob-2x.jpg 2x"
-                    media="(min-width: 480px" />
+                    media="(min-width: 480px)" />
                   <img
                     class="team__photo"
                     src="./images/mihail-ermakov-tab.jpg"
