--- a/portfolio.html
+++ b/portfolio.html
@@ -134,13 +134,13 @@
                   <picture>
                     <source
                       srcset="./images/laptop.jpg 1x, ./images/laptop-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="./images/laptop-tab.jpg 1x, ./images/laptop-tab-2x.jpg 2x"
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="./images/laptop-mob.jpg 1x, ./images/laptop-mob-2x.jpg 2x"
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img class="example__picture" src="./images/laptop-mob.jpg" alt="Ноутбук" />
                   </picture>
 
@@ -162,14 +162,13 @@
                   <picture>
                     <source
                       srcset="./images/basketball.jpg 1x, ./images/basketball-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="./images/basketball-tab.jpg 1x, ./images/basketball-tab-2x.jpg 2x"
-                      -2x
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="./images/basketball-mob.jpg 1x, ./images/basketball-mob-2x.jpg 2x"
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img
                       class="example__picture"
                       src="./images/basketball-mob.jpg"
@@ -194,13 +193,13 @@
                   <picture>
                     <source
                       srcset="./images/restaurant.jpg 1x, ./images/restaurant-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="./images/restaurant-tab.jpg 1x, ./images/restaurant-tab-2x.jpg 2x"
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="./images/restaurant-mob.jpg 1x, ./images/restaurant-mob-2x.jpg 2x"
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img
                       class="example__picture"
                       src="./images/restaurant-mob.jpg"
@@ -225,13 +224,13 @@
                   <picture>
                     <source
                       srcset="./images/headphones.jpg 1x, ./images/headphones-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="./images/headphones-tab.jpg 1x, ./images/headphones-tab-2x.jpg 2x"
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="./images/headphones-mob.jpg 1x, ./images/headphones-mob-2x.jpg 2x"
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img
                       class="example__picture"
                       src="./images/headphones-mob.jpg"
@@ -256,13 +255,13 @@
                   <picture>
                     <source
                       srcset="./images/boxes.jpg 1x, ./images/boxes-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="./images/boxes-tab.jpg 1x, ./images/boxes-tab-2x.jpg 2x"
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="./images/boxes-mob.jpg 1x, ./images/boxes-mob-2x.jpg 2x"
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img class="example__picture" src="./images/boxes-mob.jpg" alt="Боксеры" />
                   </picture>
 
@@ -284,13 +283,13 @@
                   <picture>
                     <source
                       srcset="./images/screen.jpg 1x, ./images/screen-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="./images/screen-tab.jpg 1x, ./images/screen-tab-2x.jpg 2x"
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="./images/screen-mob.jpg 1x, ./images/screen-mob-2x.jpg 2x"
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img class="example__picture" src="./images/screen-mob.jpg" alt="Экран" />
                   </picture>
 
@@ -312,13 +311,13 @@
                   <picture>
                     <source
                       srcset="./images/magazine.jpg 1x, ./images/magazine-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="./images/magazine-tab.jpg 1x, ./images/magazine-tab-2x.jpg 2x"
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="./images/magazine-mob.jpg 1x, ./images/magazine-mob-2x.jpg 2x"
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img class="example__picture" src="./images/magazine-mob.jpg" alt="Журнал" />
                   </picture>
 
@@ -340,13 +339,13 @@
                   <picture>
                     <source
                       srcset="./images/label.jpg 1x, ./images/label-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="./images/label-tab.jpg 1x, ./images/label-tab-2x.jpg 2x"
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="./images/label-mob.jpg 1x, ./images/label-mob-2x.jpg 2x"
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img class="example__picture" src="./images/label-mob.jpg" alt="Этикетка" />
                   </picture>
 
@@ -368,19 +367,19 @@
                   <picture>
                     <source
                       srcset="./images/laptop-typing.jpg 1x, ./images/laptop-typing-2x.jpg 2x"
-                      media="(min-width: 1200px" />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="
                         ./images/laptop-typing-tab.jpg    1x,
                         ./images/laptop-typing-tab-2x.jpg 2x
                       "
-                      media="(min-width: 768px" />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/laptop-typing-mob.jpg    1x,
                         ./images/laptop-typing-mob-2x.jpg 2x
                       "
-                      media="(min-width: 480px" />
+                      media="(min-width: 480px)" />
                     <img
                       class="example__picture"
                       src="./images/laptop-typing-mob.jpg"
