--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <nav class="menu-nav">
                 <ul class="menu-nav__list list">
                   <li class="menu-nav__item">
-                    <a class="menu-nav__link current link" href="index.html">Студія</a>
+                    <a class="menu-nav__link current-menu link" href="index.html">Студія</a>
                   </li>
                   <li class="menu-nav__item">
                     <a class="menu-nav__link link" href="portfolio.html">Портфоліо</a>
