--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
               <a class="navigation__link link" href="index.html">Студія</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link current link" href="portfolio.html">Портфоліо</a>
+              <a class="navigation__link current-menu link" href="portfolio.html">Портфоліо</a>
             </li>
             <li class="navigation__item">
               <a class="navigation__link link" href="">Контакти</a>
@@ -72,10 +72,10 @@
               <nav class="menu-nav">
                 <ul class="menu-nav__list list">
                   <li class="menu-nav__item">
-                    <a class="menu-nav__link current link" href="index.html">Студія</a>
+                    <a class="menu-nav__link link" href="index.html">Студія</a>
                   </li>
                   <li class="menu-nav__item">
-                    <a class="menu-nav__link link" href="portfolio.html">Портфоліо</a>
+                    <a class="menu-nav__link current-menu link" href="portfolio.html">Портфоліо</a>
                   </li>
                   <li class="menu-nav__item">
                     <a class="menu-nav__link link" href="">Контакти</a>
@@ -474,6 +474,6 @@
         </div>
       </div>
     </footer>
-    <script src="./js/menu.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
