--- a/portfolio.html
+++ b/portfolio.html
@@ -178,7 +178,7 @@
                   <p class="example__description">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу
+                    приватну особу.
                   </p>
                 </div>
                 <div class="example__works">
